--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "analyze": "vue-cli-service build --mode analyze",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
+    "fastclick": "^1.0.6",
+    "lib-flexible": "^0.3.2",
     "register-service-worker": "^1.6.2",
+    "vant": "^2.2.11",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1"
@@ -22,14 +26,19 @@
     "@vue/cli-service": "^4.0.0",
     "@vue/eslint-config-prettier": "^5.0.0",
     "babel-eslint": "^10.0.3",
+    "compression-webpack-plugin": "^3.0.0",
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "lint-staged": "^9.4.2",
+    "postcss-pxtorem": "^4.0.1",
     "prettier": "^1.18.2",
-    "vue-template-compiler": "^2.6.10"
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "vconsole": "^3.3.4",
+    "vue-template-compiler": "^2.6.10",
+    "webpack-bundle-analyzer": "^3.6.0"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
