--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "fastclick": "^1.0.6",
     "lib-flexible": "^0.3.2",
     "register-service-worker": "^1.6.2",
-    "vant": "^2.2.11",
+    "vant": "^2.2.12",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1"
@@ -26,6 +26,7 @@
     "@vue/cli-service": "^4.0.0",
     "@vue/eslint-config-prettier": "^5.0.0",
     "babel-eslint": "^10.0.3",
+    "babel-plugin-import": "^1.12.2",
     "compression-webpack-plugin": "^3.0.0",
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.1",
