--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lint-staged": "^9.4.2",
     "postcss-pxtorem": "^4.0.1",
     "prettier": "^1.18.2",
+    "script-ext-html-webpack-plugin": "^2.1.4",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "vconsole": "^3.3.4",
     "vue-template-compiler": "^2.6.10",
