--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "postcss-pxtorem": "^4.0.1",
     "prettier": "^1.18.2",
     "script-ext-html-webpack-plugin": "^2.1.4",
+    "svg-sprite-loader": "^4.1.6",
+    "svgo": "^1.3.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "vconsole": "^3.3.4",
     "vue-template-compiler": "^2.6.10",
