--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "analyze": "vue-cli-service build --mode analyze",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
   },
   "dependencies": {
+    "@babel/register": "^7.7.0",
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "fastclick": "^1.0.6",
@@ -26,6 +28,9 @@
     "@vue/eslint-config-prettier": "^5.0.0",
     "babel-eslint": "^10.0.3",
     "babel-plugin-import": "^1.12.2",
+    "body-parser": "^1.19.0",
+    "chalk": "^3.0.0",
+    "chokidar": "^3.3.0",
     "compression-webpack-plugin": "^3.0.0",
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.1",
@@ -33,6 +38,7 @@
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "lint-staged": "^9.4.2",
+    "mockjs": "^1.1.0",
     "postcss-pxtorem": "^4.0.1",
     "prettier": "^1.18.2",
     "script-ext-html-webpack-plugin": "^2.1.4",
