--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "vant": "^2.2.12",
         "vue": "^2.6.10",
         "vue-router": "^3.1.3",
-        "vuex": "^3.0.1"
+        "vuex": "^3.0.1",
+        "weixin-js-sdk": "^1.4.0-test"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "^4.0.0",
