--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "build": "vue-cli-service build",
         "analyze": "vue-cli-service build --mode analyze",
         "lint": "vue-cli-service lint",
-        "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
+        "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml",
+        "new": "plop"
     },
     "dependencies": {
         "@babel/register": "^7.7.0",
@@ -40,6 +41,7 @@
         "less-loader": "^5.0.0",
         "lint-staged": "^9.4.2",
         "mockjs": "^1.1.0",
+        "plop": "^2.6.0",
         "postcss-pxtorem": "^4.0.1",
         "prettier": "^1.18.2",
         "script-ext-html-webpack-plugin": "^2.1.4",
