--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     },
     "dependencies": {
         "@babel/register": "^7.7.0",
+        "@sentry/browser": "^5.15.5",
+        "@sentry/integrations": "^5.15.5",
         "axios": "^0.19.0",
         "core-js": "^3.3.2",
         "fastclick": "^1.0.6",
